swagger api updated, analysis divided into DAILYPOWER and HOURLYPOWER
